test/corpus/context.test
======
simple
======
if: context
---
(source
  (expression
    (context
      (identifier))))

==================
simple (delimited)
==================
if: ${{ context }}
---
(source
  (delimited_expression
    (context
      (identifier))))

========
property
========
if: context.property
---
(source
  (expression
    (context
      (identifier)
      (property
        (property_deref)
        (identifier)))))

===============
nested property
===============
if: context.property.nested-here
---
(source
  (expression
    (context
      (identifier)
      (property
        (property_deref)
        (identifier))
      (property
        (property_deref)
        (identifier)))))

=================
asterisk property
=================
if: context.*.property
---
(source
  (expression
    (context
      (identifier)
      (property
        (property_deref)
        (asterisk))
      (property
        (property_deref)
        (identifier)))))

=====================
index property string
=====================
if: github['sha']
---
(source
  (expression
    (context
      (identifier)
      (property
        (index
          (string
            (string_content)))))))

=====================
index property number
=====================
if: job.services.postgres.ports[5432]
---
(source
  (expression
    (context
      (identifier)
      (property
        (property_deref)
        (identifier))
      (property
        (property_deref)
        (identifier))
      (property
        (property_deref)
        (identifier))
      (property
        (index
          (number))))))

================================
single character identifiers
================================
if: needs.a.outputs.b
---
(source
  (expression
    (context
      (identifier)
      (property
        (property_deref)
        (identifier))
      (property
        (property_deref)
        (identifier))
      (property
        (property_deref)
        (identifier)))))

=============================================
single character identifier (delimited)
=============================================
if: ${{ x }}
---
(source
  (delimited_expression
    (context
      (identifier))))
