test/corpus/function-call.test
===========
simple call
===========
if: myFunction()
---
(source
  (expression
    (function_call
      function: (identifier))))

=======================
simple call (delimited)
=======================
if: ${{ myFunction() }}
---
(source
  (delimited_expression
    (function_call
      function: (identifier))))

===========================
single context as parameter
===========================
if: toJSON(job)
---
(source
  (expression
    (function_call
      function: (identifier)
      arguments: (arguments
        (context
          (identifier))))))

====================
literal as parameter
====================
if: fromJSON('{"key":"value"}')
---
(source
  (expression
    (function_call
      function: (identifier)
      arguments: (arguments
        (string
          (string_content))))))

===================
multiple parameters
===================
if: contains(github.event.issue.labels.*.name, 'bug')
---
(source
  (expression
    (function_call
      function: (identifier)
      arguments: (arguments
        (context
          (identifier)
          (property
            (property_deref)
            (identifier))
          (property
            (property_deref)
            (identifier))
          (property
            (property_deref)
            (identifier))
          (property
            (property_deref)
            (asterisk))
          (property
            (property_deref)
            (identifier)))
        (string
          (string_content))))))

===============
format() string
===============
if: format('{{Hello {0} {1} {2}!}}', 'Mona', 'the', 'Octocat')
---
(source
  (expression
    (function_call
      function: (identifier)
      arguments: (arguments
        (format_string
          (scape_sequence)
          (string_content)
          (format_variable
            (format_index))
          (format_variable
            (format_index))
          (format_variable
            (format_index))
          (string_content)
          (scape_sequence))
        (string
          (string_content))
        (string
          (string_content))
        (string
          (string_content))))))

=========================
property of call result
=========================
if: fromJSON(steps.meta.outputs.json).tags
---
(source
  (expression
    (function_call
      function: (identifier)
      arguments: (arguments
        (context
          (identifier)
          (property
            (property_deref)
            (identifier))
          (property
            (property_deref)
            (identifier))
          (property
            (property_deref)
            (identifier)))))
    (property
      (property_deref)
      (identifier))))

=====================================
index of call result (delimited)
=====================================
if: ${{ fromJSON(inputs.list)[0].name == 'x' }}
---
(source
  (delimited_expression
    (function_call
      function: (identifier)
      arguments: (arguments
        (context
          (identifier)
          (property
            (property_deref)
            (identifier)))))
    (property
      (index
        (number)))
    (property
      (property_deref)
      (identifier))
    (operator
      (eq))
    (string
      (string_content))))

